update font size

--- a/index.html
+++ b/index.html
@@ -150,11 +150,23 @@
       :root {
         --content_width: 50vw;
       }
+
+      html,
+      body {
+
+        font-size: 2vw;
+      }
     }
 
     @media (max-width: 375px) {
       :root {
         --content_width: 75vw;
+      }
+
+      html,
+      body {
+
+        font-size: 3vw;
       }
     }
   </style>
