--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
       width: fit-content;
       height: fit-content;
       border-radius: 1.25rem;
+      border: 1px solid var(--gray_950);
+      box-shadow: .5rem .5rem var(--gray_950);
     }
 
     .card_img {
